Fix 'hyphens: auto' to work only when line wrapping is allowed

This patch fixes 'hyphens: auto' to work only when line wrapping is
allowed.

BUG=678356

Review-Url: https://codereview.chromium.org/2614743004
Cr-Commit-Position: refs/heads/master@{#441805}

Former-commit-id: 6715bcb1960f4062e2f6daf261e3da76c7d62019